<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/edtRegisterUsername"
            android:minHeight="48dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:autofillHints="username"
            android:inputType="text"
            android:textColorHint="@color/cardview_dark_background"/>

        <EditText
            android:id="@+id/edtRegisterEmail"
            android:minHeight="48dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/cardview_dark_background"/>

        <EditText
            android:id="@+id/edtRegisterPassword"
            android:minHeight="48dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:textColorHint="@color/cardview_dark_background"/>

        <EditText
            android:id="@+id/edtConfirmPassword"
            android:minHeight="48dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:textColorHint="@color/cardview_dark_background"/>

        <Button
            android:id="@+id/btnCreateAccount"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/create_account"/>

        <TextView
            android:id="@+id/txtLoginSignup"
            android:minHeight="48dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/login_prompt"
            android:textSize="12sp"
            android:clickable="true"
            android:focusable="true"
            android:padding="10dp"/>





    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
